<resources>
    <string name="app_name">Расписание</string>
    <string name="main_header">Расписание</string>
    <string name="find">Найти</string>
    <string name="from">Откуда</string>
    <string name="to">Куда</string>
    <string name="date">Дата</string>
    <string name="loading">Loading...</string>
    <string name="primary_country_choice">Выберите страну</string>
    <string name="country_choose">Выбор страны</string>
    <string name="set_with_code">Установка кодом</string>
    <string-array name="date_list">
        <item>Сегодня</item>
        <item>Завтра</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="station_name">Название станции</string>
    <string name="direction_name">Направление</string>
    <string name="from_to">Откуда - Куда</string>
    <string name="title_activity_bottom_navbar">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="straight_to">Туда</string>
    <string name="from_straight">Обратно</string>
    <string name="today">Сегодня</string>
    <string name="click_to_select_station">Нажмите для выбора станции</string>
    <string name="showSchedule">Показать расписание</string>
</resources>