<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/show_result_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to_editText"
            android:layout_marginTop="132dp" android:onClick="setFind_button"
            app:layout_constraintHorizontal_bias="0.498"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@color/white"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/from"
            android:id="@+id/from_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_header"
            android:layout_marginTop="40dp"
            android:imeOptions="actionNext"
            android:paddingHorizontal="@dimen/cardview_default_elevation"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/to"
            android:background="@color/white"
            android:textColor="@color/black"
            android:ems="10"
            android:id="@+id/to_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_editText"
            android:imeOptions="actionNext"
            android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/main_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_header"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            android:textSize="25sp"/>
    <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:ems="10"
            android:hint="@string/date"
            android:background="@color/white"
            android:id="@+id/editTextDate"
            android:imeOptions="actionSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to_editText"
            app:layout_constraintBottom_toTopOf="@+id/show_result_button"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/test_field"
            app:layout_constraintTop_toBottomOf="@+id/show_result_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="173dp" android:layout_marginEnd="179dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>